--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
   /* РАДАР */
   .radar{
     position:relative; height:110px; margin:4px 0 10px; border-radius:20px; overflow:hidden;
-    /* Ровная подложка без вдавления и без обводки */
     background:var(--panel);
     box-shadow:none;
     border:none;
@@ -245,7 +244,7 @@
           <div class="heart"></div>
           <div class="ecg-wrap">
             <svg class="ecg" viewBox="0 0 600 100" preserveAspectRatio="none" aria-hidden="true">
-              <!-- Базовая линия на y=50, по центру контейнера -->
+              <!-- Базовая линия по центру контейнера -->
               <path class="trace" d="M0 50
                 C20 48,35 52,55 50
                 L80 50 90 40 100 60 110 30 120 65 130 50
@@ -270,7 +269,7 @@
 
         <div class="tiles" id="zonesGrid"></div>
 
-        <button class="btn-red" id="helpTile">Как узнать свой анаэробный порог</button>
+        <button class="btn-red" id="helpTile">Как узнать свой анаэробный порог - ПАНО </button>
       </div>
     </div>
   </div>
@@ -291,50 +290,112 @@
 <script>
   const $ = s => document.querySelector(s);
   let pulseIndex = 0;
-  let clearedOnce = false;
   let lastValidANP = 165;
 
   function calcZones(anp){
     const r=n=>Math.round(n);
     return [
-      {name:'ЗОНА 1',desc:'Восстановительная', val:`< ${r(anp*0.85)}`},
-      {name:'ЗОНА 2',desc:'Аэробная',          val:`${r(anp*0.85)} – ${r(anp*0.95)}`},
-      {name:'ЗОНА 3',desc:'Пороговая',         val:`${r(anp*0.95)} – ${r(anp*1.05)}`},
-      {name:'ЗОНА 4',desc:'Субмаксимальная',   val:`${r(anp*1.05)} – ${r(anp*1.15)}`},
-      {name:'ЗОНА 5',desc:'Максимальная',      val:`> ${r(anp*1.15)}`}
+      {name:'ЗОНА 1',desc:'Восстановление',      val:`< ${r(anp*0.80)}`},
+      {name:'ЗОНА 2',desc:'Аэробная выносливость',               val:`${r(anp*0.80)} – ${r(anp*0.90)}`},
+      {name:'ЗОНА 3',desc:'Аэробная мощноть',              val:`${r(anp*0.90)} – ${r(anp*0.95)}`},
+      {name:'ЗОНА 4',desc:'ПАНО',        val:`${r(anp*0.95)} – ${r(anp*1.02)}`},
+      {name:'ЗОНА 5',desc:'Анаэробная выносливость',           val:`${r(anp*1.02)} – ${r(anp*1.06)}`},
+      {name:'ЗОНА 6',desc:'Анаэробная мощность',    val:`> ${r(anp*1.06)}`} // по требованию: больше 106% от порога
     ];
   }
 
   function zoneInfo(i){
     const infos = [
       {
-        title: 'ЗОНА 1 — Восстановительная',
+        title: 'ЗОНА 1 — Восстановление',
         html: `
-          <p><strong>Первая пульсовая зона в беге</strong> — это самая лёгкая по интенсивности зона тренировок, которая ориентируется на низкий уровень сердечного ритма.</p>
-          <p><strong>Пульс:</strong> примерно 50–60% от максимального, зависит от возраста и индивидуальных особенностей.</p>
-          <p><strong>Ощущения:</strong> очень лёгкий бег, «разговорный темп» — можно спокойно разговаривать, не задыхаясь.</p>
-          <p><strong>Физиология:</strong></p>
+          <p>&lt;80% ПАНО</p>
+          <p>Суть: очень лёгкая, максимально комфортная нагрузка.</p>
+          <p>Для чего: восстановление, расслабление.</p>
+          <p>Примеры тренировок:</p>
           <ul>
-            <li>мышцы работают в условиях полного обеспечения кислородом, молочная кислота практически не накапливается;</li>
-            <li>сердце укрепляется мягко — увеличивается ударный объём (за одно сокращение выталкивается больше крови), но без перегрузки;</li>
-            <li>улучшается экономичность дыхания, дыхательные мышцы работают без стресса;</li>
-            <li>включается парасимпатический отдел нервной системы → снижение стресса, улучшение восстановления и сна;</li>
-            <li>активируется липолиз (расщепление жиров), снижается уровень кортизола.</li>
-          </ul>
-          <p>Зона 1 — это зона восстановления и “фундаментальная база”. Она не делает вас быстрее напрямую, но позволяет организму адаптироваться и выдерживать более тяжёлые тренировки без перетренированности.</p>
-          <p><strong>Тренировки в этой зоне:</strong></p>
-          <ul>
-            <li>Восстановительные пробежки после тяжёлых тренировок или стартов.</li>
-            <li>Разминка и заминка (начала и окончания тренировки).</li>
-            <li>Длительные лёгкие пробежки для новичков.</li>
-            <li>Ходьба и бег трусцой для снижения стресса и наработки общей базы выносливости.</li>
+            <li>лёгкий бег трусцой после тяжёлых сессий</li>
+            <li>пешие прогулки</li>
+            <li>заминка</li>
           </ul>
         `
       },
-      {title:'ЗОНА 2 — Аэробная база', html:'<p>Описание зоны 2…</p>'},
-      {title:'ЗОНА 3 — Пороговая', html:'<p>Описание зоны 3…</p>'},
-      {title:'ЗОНА 4 — Субмаксимальная', html:'<p>Описание зоны 4…</p>'},
-      {title:'ЗОНА 5 — Максимальная', html:'<p>Описание зоны 5…</p>'},
+{
+        title:'ЗОНА 2 — Аэробная база',
+        html:`
+          <p>80–90% ПАНО</p>
+          <p>Суть: лёгкая, «разговорная» нагрузка, база.</p>
+          <p>Для чего: развитие сердечно-сосудистой системы, улучшение выносливости.</p>
+          <p>Примеры тренировок:</p>
+          <ul>
+            <li>длительные пробежки (long run)</li>
+            <li>лёгкие кроссы</li>
+            <li>бег в медленном равномерном темпе</li>
+          </ul>
+          <p>Типичная ошибка: бежать слишком быстро — скатываться в зону 3.</p>
+        `
+      },
+
+ {
+        title:'ЗОНА 3 — Аэробная мощность',
+        html:`
+          <p>90–95% ПАНО</p>
+          <p>Суть: «комфортно тяжело», дыхание учащается.</p>
+          <p>Для чего: улучшение формы, подготовка к марафонскому темпу.</p>
+          <p>Примеры тренировок:</p>
+          <ul>
+            <li>темповые пробежки (30–60 мин)</li>
+            <li>прогрессивный бег (с выходом в зону 3 в конце)</li>
+            <li>длинные интервалы (например, 2–3×20 мин)</li>
+          </ul>
+        `
+      },
+
+ {
+        title:'ЗОНА 4 — Порог (ПАНО)',
+        html:`
+          <p>95–102% ПАНО</p>
+          <p>Суть: интенсивно и некомфортно, но ещё удержимо.</p>
+          <p>Для чего: повышение порога, умение дольше терпеть высокую нагрузку.</p>
+          <p>Примеры тренировок:</p>
+          <ul>
+            <li>интервалы по 10–20 мин (с коротким отдыхом)</li>
+            <li>короткие интервалы (например, 3×15 мин)</li>
+            <li>часовой → средний пульс здесь.</li>
+          </ul>
+        `
+      },
+ {
+        title:'ЗОНА 5 — VO₂max (анаэробная выносливость)',
+        html:`
+          <p>102–106% ПАНО</p>
+          <p>Суть: выше порога, работа на VO₂max (максимальное потребление кислорода).</p>
+          <p>Для чего: повышение максимальной аэробной мощности.</p>
+          <p>Примеры тренировок:</p>
+          <ul>
+            <li>интервалы по 3–5 мин</li>
+            <li>5×1000 м или 6×800 м с равным отдыхом</li>
+            <li>фартлек в быстром темпе</li>
+          </ul>
+        `
+      },
+     
+      {
+        title:'ЗОНА 6 — Анаэробная мощность',
+        html:`
+          <p>&gt;106% ПАНО</p>
+          <p>Суть: почти максимум, короткие усилия.</p>
+          <p>Для чего: развитие нервно-мышечной системы, скорость.</p>
+          <p>Примеры тренировок:</p>
+          <ul>
+            <li>интервалы по 30–90 сек</li>
+            <li>спринты в горку</li>
+            <li>ускорения 200–400 м</li>
+          </ul>
+          <p><strong>Почему 6 зон, а не 5:</strong><br>
+          Стандартная «зона 5» разделена на две части — выносливость (зона 5) и мощность (зона 6), чтобы точнее разделять интервальные работы.</p>
+        `
+      },
     ];
     return infos[i];
   }
@@ -355,7 +416,7 @@
 
     list.forEach((z,i)=>{
       let hearts = '';
-      for(let h=1; h<=5; h++){
+      for(let h=1; h<=6; h++){                 // теперь до 6 сердечек
         const active = h<=i+1;
         const char = active ? '❤' : '♡';
         hearts += `<span class="${active ? 'active' : ''}">${char}</span>`;
@@ -385,6 +446,7 @@
     if(tiles[idx]) tiles[idx].classList.add('pulse');
   }
 
+  // модалка с корректным переходом пульсации на след. карточку (динамически по количеству тайлов)
   function openModal(title, html, advanceIndex){
     $('#modalTitle').textContent = title;
     $('#modalContent').innerHTML = html;
@@ -393,11 +455,12 @@
     const onClose = ()=>{
       $('#modal').classList.remove('show');
       if (typeof advanceIndex === 'number') {
-        if (advanceIndex < 4) {
-          const next = Math.min(advanceIndex + 1, 4);
+        const tiles = document.querySelectorAll('.tile');
+        const maxIndex = tiles.length - 1;
+        if (advanceIndex < maxIndex) {
+          const next = Math.min(advanceIndex + 1, maxIndex);
           applyPulse(next);
         } else {
-          const tiles = document.querySelectorAll('.tile');
           tiles.forEach(t=>t.classList.remove('pulse'));
         }
       }
@@ -442,15 +505,36 @@
     applyPulse(pulseIndex);
   });
 
-  $('#anp').addEventListener('keydown', e=>{
+  // === ОБНОВЛЕНИЕ: поле АНП очищается КАЖДЫЙ РАЗ при наведении курсора и при фокусе ===
+  const anpInput = $('#anp');
+
+  // Очищаем при фокусе — удобно для клика/тач и клавиатуры (Tab)
+  anpInput.addEventListener('focus', e => {
+    e.target.value = '';
+  });
+
+  // Очищаем при наведении курсора, если поле не в фокусе (чтобы не мешать набору текста)
+  anpInput.addEventListener('mouseenter', e => {
+    if (document.activeElement !== anpInput) {
+      e.target.value = '';
+    }
+  });
+
+  // Enter — пересчёт
+  anpInput.addEventListener('keydown', e=>{
     if(e.key==='Enter'){
       render();
       pulseIndex = 0;
       applyPulse(pulseIndex);
     }
   });
-  $('#anp').addEventListener('focus', e=>{ if(!clearedOnce){ e.target.value=''; clearedOnce=true; } });
-  $('#anp').addEventListener('blur', e=>{ if(!e.target.value){ e.target.value = lastValidANP; } });
+
+  // Если ушли из поля и оставили пусто — вернуть последнее валидное значение
+  anpInput.addEventListener('blur', e=>{
+    if(!e.target.value){
+      e.target.value = lastValidANP;
+    }
+  });
 
   $('#helpTile').addEventListener('click', ()=>{
     openModal(
@@ -462,10 +546,11 @@
     );
   });
 
+  // Первый рендер
   render();
 </script>
 </body>
 </html>
 
 
-       
+   
