--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -22,6 +22,10 @@
     --glass-shadow: rgba(0,0,0,.45);
     --glass-blur: 18px;
     --glass-glow: 0 10px 30px rgba(239,35,60,.25);
+
+    /* Доп. токены для нового подсвета */
+    --pulse-ring: rgba(255,255,255,.45);
+    --pulse-glow: rgba(255,255,255,.14);
   }
 
   *{box-sizing:border-box}
@@ -111,14 +115,13 @@
     cursor:pointer;
     position: relative; /* для подсветки */
     outline: none; /* под фокус-обводку ниже */
+    transition: transform .18s ease, box-shadow .18s ease;
   }
 
-  .tile.pulse{ animation:pulse 1.2s ease-in-out infinite; }
-  @keyframes pulse{0%{ transform:scale(1);}50%{ transform:scale(1.02);}100%{ transform:scale(1);} }
-
-  /* полупрозрачная подсветка активной карточки */
-  .tile::after{ content:""; position:absolute; inset:0; border-radius:inherit; background:var(--accent); opacity:0; transition: opacity .2s ease; pointer-events:none; }
-  .tile.pulse::after{ opacity:.2; }
+  /* Удалено: красная полупрозрачная подсветка активной карточки
+     .tile::after{ background:var(--accent); opacity:0; }
+     .tile.pulse::after{ opacity:.2; }
+  */
 
   .zone-row{display:flex; align-items:center; justify-content:center; gap:4px;}
   .zone-title{font-size:14px; color:var(--ink);} 
@@ -127,6 +130,57 @@
   .hearts span.active{color:var(--accent);} 
   .zone-desc{font-size:13px; color:var(--muted);} 
   .num{font-size:20px; font-family:'Bebas Neue',sans-serif;}
+
+  /* ===========================
+     НОВОЕ ДЕЛИКАТНОЕ ВЫДЕЛЕНИЕ АКТИВНОЙ КАРТОЧКИ (glass)
+     =========================== */
+
+  .tile.pulse{
+    transform: translateY(-1px);
+    box-shadow:
+      inset 2px 2px 6px var(--shadow-dark),
+      inset -2px -2px 6px var(--shadow-light),
+      0 10px 26px var(--glass-shadow);
+  }
+
+  /* Тонкая светящаяся рамка */
+  .tile.pulse::before{
+    content:"";
+    position:absolute; inset:-2px; border-radius:inherit;
+    padding:2px; pointer-events:none;
+
+    background:
+      linear-gradient(135deg, var(--glass-highlight), transparent 55%) border-box,
+      linear-gradient(135deg, var(--pulse-ring), transparent 60%) border-box;
+
+    -webkit-mask:
+      linear-gradient(#000 0 0) content-box,
+      linear-gradient(#000 0 0);
+    -webkit-mask-composite: xor;
+            mask-composite: exclude;
+
+    filter: blur(.3px);
+    opacity:.85;
+    animation: ringPulse 1.6s ease-in-out infinite;
+  }
+
+  /* Лёгкий внутренний блик */
+  .tile.pulse::after{
+    content:"";
+    position:absolute; inset:2px; border-radius:inherit; pointer-events:none;
+    background: radial-gradient(120% 90% at 20% 0%, rgba(255,255,255,.20), rgba(255,255,255,0) 55%);
+    opacity:.55;
+    animation: sheen 2.4s ease-in-out infinite;
+  }
+
+  @keyframes ringPulse{
+    0%,100%{ opacity:.55; filter: blur(.2px); }
+    50%    { opacity:.95; filter: blur(.6px); }
+  }
+  @keyframes sheen{
+    0%,100%{ opacity:.35; transform: translateY(0); }
+    50%    { opacity:.6;  transform: translateY(-1px); }
+  }
 
   /* ===========================
      ГЛАССМОРФНЫЕ ВСПЛЫВАЮЩИЕ ОКНА
@@ -231,7 +285,9 @@
 
   @media (prefers-reduced-motion: reduce){
     .trace{ animation: none; }
-    .tile.pulse{ animation: none; }
+    .tile.pulse::before,
+    .tile.pulse::after{ animation:none; }
+    .tile.pulse{ transform:none; }
     .backdrop{ transition: none; }
     .modal{ animation: none; opacity:1; transform:none; }
   }
