--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#1c1c1c" />
-<meta name="description" content="Быстрый расчёт беговых пульсовых зон от ПАНО. Минимализм, дарк-тема, глассморфизм.">
+<meta name="description" content="Быстрый расчёт беговых пульсовых зон от ПАНО.">
 <meta name="color-scheme" content="dark light">
 <title>Зоны от АНП — compact hearts (Dark · Glassmorphism)</title>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -387,7 +387,7 @@
       {name:'ЗОНА 2',desc:'Аэробная выносливость', val:toRange(z2_lo,z2_hi)},
       {name:'ЗОНА 3',desc:'Аэробная мощность',     val:toRange(z3_lo,z3_hi)},
       {name:'ЗОНА 4',desc:'Порог (ПАНО)',          val:toRange(z4_lo,z4_hi)},
-      {name:'ЗОНА 5',desc:'Анаэробная выносливость', val:toRange(z5_lo,z5_hi)},
+      {name:'ЗОНА 5',desc:'VO₂max', val:toRange(z5_lo,z5_hi)},
       {name:'ЗОНА 6',desc:'Анаэробная мощность',   val:`> ${r(z6_lo)}`}
     ];
   }
