--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <style>
   :root{
-    --bg:#1c1c1c; --ink:#e9edf4; --muted:#a0a4ae; --panel:#2a2a2a;
+    --bg:##f5f1e6; --ink:#e9edf4; --muted:#a0a4ae; --panel:#2a2a2a;
     --accent:#EF233C;
     --shadow-dark:#121212; --shadow-light:#333333; --radius:20px;
 
